footer and main changed

--- a/templates/react/index.html.twig
+++ b/templates/react/index.html.twig
@@ -8,7 +8,7 @@
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
     <div {{ react_component('Header', { 'fullName': 'Perez' }) }}></div>
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    {# <h1>Hello {{ controller_name }}! ✅</h1> #}
     <div {{ react_component('Main', { 'fullName': 'Johan' }) }}></div>
     <div {{ react_component('Footer', { 'userId': userId }) }}></div>
     
