--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -3,9 +3,10 @@
 body {
     background-color: lightgray;
     min-height: 100vh;
+    width: 100%;
 }
 
-button {
+/* .repairs {
     color: pink;
     background: green;
-}
+} */
