--- a/templates/react/profile.html.twig
+++ b/templates/react/profile.html.twig
@@ -8,8 +8,8 @@
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
     <div {{ react_component('Header', { 'fullName': 'Perez' }) }}></div>
-    <div {{ react_component('Profile', { 'fullName': 'Profile' }) }}></div>
-    <div {{ react_component('Footer', { 'userId': userId }) }}></div>
+    <div {{ react_component('Profile', { 'users' : 'users' }) }}></div>
+    <div {{ react_component('Footer') }}></div>
     
 
     {% block javascripts %}
