--- a/templates/react/login.html.twig
+++ b/templates/react/login.html.twig
@@ -8,8 +8,8 @@
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
     <div {{ react_component('Header', { 'fullName': 'Perez' }) }}></div>
-    <div {{ react_component('Login', { 'fullName': 'Johan' }) }}></div>
-    <div {{ react_component('Footer', { 'userId': userId }) }}></div>
+    <div {{ react_component('Login', { 'user': user }) }}></div>
+    <div {{ react_component('Footer') }}></div>
     
 
     {% block javascripts %}
